--- a/pages/cart.html
+++ b/pages/cart.html
@@ -25,7 +25,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-5 col-sm-6 col-xs-12">
                     <div class="logo">
-                        <a class="logo-img" href="../pages/index.html"><img src="../images/logo_2.png" alt="" title=""/></a>
+                        <a class="logo-img" href="/"><img src="../images/logo_2.png" alt="" title=""/></a>
                     </div>
                 </div>
             </div>
@@ -36,7 +36,7 @@
 
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                         <ul class="nav-main clearfix">
-                            <li class="active nav-main-item"><a class="nav-main-link" href="../pages/index.html">Main</a>|
+                            <li class="active nav-main-item"><a class="nav-main-link" href="/">Main</a>|
                             <li class="nav-main-item"><a class="nav-main-link"  href="../pages/order_delivery.html">Order and delivery</a>|
                             <li class="nav-main-item"><a class="nav-main-link"  href="#companies">Contacts</a>
 
