--- a/pages/registration.html
+++ b/pages/registration.html
@@ -24,7 +24,7 @@
         <div class="row">
             <div class="col-lg-4 col-md-5 col-sm-6 col-xs-12">
                 <div class="logo">
-                    <a class="logo-img" href="../pages/index.html"><img src="../images/logo_2.png" alt="" title=""/></a>
+                    <a class="logo-img" href="/"><img src="../images/logo_2.png" alt="" title=""/></a>
                 </div>
             </div>
 
@@ -122,6 +122,7 @@
 <script src="../scripts/basic.js"></script>
 <script src="../scripts/registration.js"></script>
 <script src="../scripts/localStorageSave.js"></script>
+
 
 <footer class="footer">
     <div class="footer_inner">
