access for cart

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
                     <ul class="nav-main clearfix">
                         <li class="active nav-main-item"><a class="nav-main-link" href="/">Main</a>|
                         <li class="nav-main-item"><a class="nav-main-link"  href="../pages/order_delivery.html">Order and delivery</a>|
-                        <li class="nav-main-item"><a class="nav-main-link"  href="#">Contacts</a>
+                        <li class="nav-main-item"><a class="nav-main-link"  href="#">Contacts</a>|
+                        <li class="nav-main-item">Logged as:<a class="nav-main-link" id="loggedUser" href="#"></a>
+                        <li class="nav-main-item"><a class="nav-main-link" id="logOut" href="#">Log out</a>
                     </ul>
                 </div>
             </div>
