--- a/pages/cart.html
+++ b/pages/cart.html
@@ -39,6 +39,8 @@
                             <li class="active nav-main-item"><a class="nav-main-link" href="/">Main</a>|
                             <li class="nav-main-item"><a class="nav-main-link"  href="../pages/order_delivery.html">Order and delivery</a>|
                             <li class="nav-main-item"><a class="nav-main-link"  href="#companies">Contacts</a>
+                            <li class="nav-main-item">Logged as:<a class="nav-main-link" id="loggedUser" href="#"></a>
+                            <li class="nav-main-item"><a class="nav-main-link" id="logOut" href="#">Log out</a>
 
                         </ul>
                     </div>
