--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <li class="nav-main-item"><a class="nav-main-link"  href="../pages/order_delivery.html">Order and delivery</a>|
                         <li class="nav-main-item"><a class="nav-main-link"  href="#">Contacts</a>|
                         <li class="nav-main-item">Logged as:<a class="nav-main-link" id="loggedUser" href="#"></a>
-                        <li class="nav-main-item"><a class="nav-main-link" id="logOut" href="#">Log out</a>
+                        <li class="nav-main-item"><a class="nav-main-link" id="logOut" href="">Log out</a>
                     </ul>
                 </div>
             </div>
