--- a/pages/productReview.html
+++ b/pages/productReview.html
@@ -49,7 +49,7 @@
             <div class="row">
                 <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12">
                     <ul class="nav-add clearfix">
-                        <li class="active nav-add-item"><a class="nav-add-link links-main" href="#">Phone</a>
+                        <li class="active nav-add-item"><a class="nav-add-link links-main" href="/phone">Phone</a>
                         <li class="nav-add-item"><a class="nav-add-link links-main" href="#">Tablet</a>
                         <li class="nav-add-item"><a class="nav-add-link links-main" href="#">Laptop</a>
                         <li class="nav-add-item"><a class="nav-add-link links-main" href="#" >Accessories</a>
@@ -59,7 +59,7 @@
                 <div class="col-lg-2">
                     <div class="nav-add-cart-wrap" >
                         <ul class="nav-add clearfix">
-                            <li class="nav-add-item"><a class="nav-add-link links-main" href="#">Cart<span class="badge-menu">(53)</span></a>
+                            <li class="nav-add-item"><a class="nav-add-link links-main" href="/cart">Cart<span id='cartCountId' class="badge-menu"></span></a>
 
                         </ul>
                     </div>
@@ -69,31 +69,10 @@
         <div class="row">
             <div class="product-section-wrap clearfix">
                 <div class="product-view">
-                    <img src="<c:url value="#"/>" alt="" title=""/>
+
                 </div>
                 <div class ="product-descr">
-                    <h4 class="pr-title">NAME OF PRODUCT</h4> <!--//id innerHtml-->
-                    <div class="pr-price-wrap">
-                        <h6 class="pr-price">PRICE</h6> <!--/price-->
-                    </div>
-                    <p class="p-main">Universal device from Asus, the consumer class. The device is built on a processor
-                        Intel's third generation, is a standard set of built-in modules and connectors.
-                        Depending on the model, can be delivered in plactikovom and in</p>
-                    <div class="pr-options-wrap clearfix">
-                        <button class="widget-button btn btn-default">Add to card</button>
-                        <button class="widget-button btn btn-default">Compare</button>
-                    </div>
-                    <!-- Nav tabs -->
-                    <ul class="nav nav-tabs" role="tablist">
-                        <li class="active"><a href="#home" role="tab" data-toggle="tab">Technical description</a></li>
-                        <li><a href="#profile" role="tab" data-toggle="tab">Feedback</a></li>
-                    </ul>
 
-                    <!-- Tab panes -->
-                    <div class="tab-content">
-                        <div class="tab-pane active" id="home">...</div>
-                        <div class="tab-pane" id="profile">...</div>
-                    </div>
                 </div>
             </div>
 
