Angular "phoneInstanceCtrl" controller

--- a/pages/order_delivery.html
+++ b/pages/order_delivery.html
@@ -16,6 +16,9 @@
 
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+
+
+
   </head>
   <body>
   
@@ -118,6 +121,9 @@
 								<h4 class="header-main header-color">You have purchased</h4>
 							</div>
 				</div>
+                <div class="row">
+                    <div id="map" ></div>
+                </div>
 							
 				
 			</main>
@@ -137,6 +143,9 @@
 				});
 			</script>
 		</section>
+        <script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+        <script src="../scripts/delivery.js"></script>
+
 		<footer class="footer">
 			<div class="footer_inner">
 				<div class="row">
