--- a/pages/productReview.html
+++ b/pages/productReview.html
@@ -82,7 +82,12 @@
     <div class="footer-push"></div>
 </section>
 
+<script src="../scripts/basic.js"></script>
+<script src="../scripts/localStorageSave.js"></script>
 <script src="../scripts/showItem.js"></script>
+<script src="../scripts/productReview.js"></script>
+
+
 <footer class="footer">
     <div class="footer_inner">
         <div class="row">
