--- a/pages/cart.html
+++ b/pages/cart.html
@@ -13,9 +13,12 @@
 
 </head>
 <body>
+<script>
+    //check if token in localStorage
+</script>
 <script src="../scripts/jquery.min.js"></script>
 <script src="../scripts/bootstrap.js"></script>
-
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
 <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 
@@ -39,7 +42,7 @@
                             <li class="active nav-main-item"><a class="nav-main-link" href="/">Main</a>|
                             <li class="nav-main-item"><a class="nav-main-link"  href="../pages/order_delivery.html">Order and delivery</a>|
                             <li class="nav-main-item"><a class="nav-main-link"  href="#companies">Contacts</a>
-                            <li class="nav-main-item">Logged as:<a class="nav-main-link" id="loggedUser" href="#"></a>
+                            <li class="nav-main-item">Logged as:<a class="nav-main-link" ng-model = "userLink" id="loggedUser" href="#">{{userLink()}}</a>
                             <li class="nav-main-item"><a class="nav-main-link" id="logOut" href="#">Log out</a>
 
                         </ul>
