--- a/pages/login.html
+++ b/pages/login.html
@@ -16,8 +16,9 @@
 
 <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
 
-<section class="container-fluid">
+<section class="container-fluid" ng-app="bonfireApp">
     <header class="header">
         <div class="row">
             <div class="col-lg-4 col-md-5 col-sm-6 col-xs-12">
@@ -33,8 +34,9 @@
                 <label for="inputUsername" class="col-lg-5 registr-label">Username</label>
 
                 <div class="col-lg-2">
-                    <input type="text" name="j_username" class="input-common" id="inputUsername" placeholder="Username"
+                    <input type="text" ng-model="uName"  name="j_username" class="input-common" id="inputUsername" placeholder="Username"
                            required>
+                    {{uName}}
                 </div>
             </div>
             <div class="registr-item clearfix">
@@ -59,6 +61,7 @@
 <script src="../scripts/localStorageSave.js"></script>
 <script src="../scripts/basic.js"></script>
 <script src="../scripts/userLogin.js"></script>
+
 
 <footer class="footer">
     <div class="footer_inner">
